' Generated by UML Generator
' Encoded: dLLDZzCm4BtdL_YOqat5EH9eMmfefRAikY0EY8ER3AcrpZYotKLbrV-EFveqJfnbuTAaysPUPjwynDTAKwaFDK_K0yE6IbgJWbEbbbfBjZjek2a4thFVG5udUrO2APWiE2I9oo8VzqBfMz3l16efE0T9dX92CWIjyWxTGYCKqq8UBTQ0L08DVETkGZ0pF_CnQpf5U4KcwMQMYY7J7bWnB0tHpbroyWrsQwgfZyvoyYXOQGiuKpgjHGay9v_inM3tHWkiB8hmwuEGzNH28O5giErUkhqYa-b6GrQXesHbJZO2gxzczpBzxEteprJML3wi1K9N6w3SzFdI7YpJnkJ_JnTMsyyDuBHy4aeceT1R8NHwGKwjtzPGYsNJS5PGpGGwiysVZ8arAqwafWnJAYlL5dx_qMxsD7IizsaxXBtdmfFs-icKSNxmtppfuEZjrKOe2ZpMug2iyQJP-ae83XJ9c_PkyMNxzRrDbIu3v2sj0z8sVhSt6mgUHlaZhQ1S7LjnkrUa0drJMeNEtS-L2_JMsnhQP6xEawM1rge736SFw-txFwfrmRu-WngdaAywQ-MgV3ZKCQnSXefQYhEIxeLM4NntmTMOO6f5uMEtlUsCXWt0s1xZN6wZasGUZMv_e6Nd0ylLES7fUO76RXcPtuV7riU18vkX4vtdV7Kw-sV_HILrGPoKC2wTZpOngSoG38sEFsa1aOF231ra34yBZqVEirTP5Zl89Z97PreaRx5usp5EuUSbTr-h2tTo3LYQ4_iF
' URL: http://www.plantuml.com/plantuml/uml/dLLDZzCm4BtdL_YOqat5EH9eMmfefRAikY0EY8ER3AcrpZYotKLbrV-EFveqJfnbuTAaysPUPjwynDTAKwaFDK_K0yE6IbgJWbEbbbfBjZjek2a4thFVG5udUrO2APWiE2I9oo8VzqBfMz3l16efE0T9dX92CWIjyWxTGYCKqq8UBTQ0L08DVETkGZ0pF_CnQpf5U4KcwMQMYY7J7bWnB0tHpbroyWrsQwgfZyvoyYXOQGiuKpgjHGay9v_inM3tHWkiB8hmwuEGzNH28O5giErUkhqYa-b6GrQXesHbJZO2gxzczpBzxEteprJML3wi1K9N6w3SzFdI7YpJnkJ_JnTMsyyDuBHy4aeceT1R8NHwGKwjtzPGYsNJS5PGpGGwiysVZ8arAqwafWnJAYlL5dx_qMxsD7IizsaxXBtdmfFs-icKSNxmtppfuEZjrKOe2ZpMug2iyQJP-ae83XJ9c_PkyMNxzRrDbIu3v2sj0z8sVhSt6mgUHlaZhQ1S7LjnkrUa0drJMeNEtS-L2_JMsnhQP6xEawM1rge736SFw-txFwfrmRu-WngdaAywQ-MgV3ZKCQnSXefQYhEIxeLM4NntmTMOO6f5uMEtlUsCXWt0s1xZN6wZasGUZMv_e6Nd0ylLES7fUO76RXcPtuV7riU18vkX4vtdV7Kw-sV_HILrGPoKC2wTZpOngSoG38sEFsa1aOF231ra34yBZqVEirTP5Zl89Z97PreaRx5usp5EuUSbTr-h2tTo3LYQ4_iF
' Generated on: 2025-10-31T17:31:32.841583700

@startuml
skinparam classAttributeIconSize 0
hide circle

class GhostNetController {
  -nets: GhostNetRepository
  -persons: PersonRepository
  --
  +GhostNetController(nets: GhostNetRepository, persons: PersonRepository)
  +initPersonBinder(binder: WebDataBinder): void
  +list(model: Model): String
  +newForm(model: Model): String
  +create(net: GhostNet, model: Model): String
  +assignForm(id: Long, model: Model): String
  +assign(id: Long, person: Person, model: Model): String
  +markDone(id: Long): String
  +lostForm(id: Long, model: Model): String
  +markLost(id: Long, person: Person, model: Model): String
  +listOpen(model: Model): String
  +redirectRoot(): String
}

class DemoApplication {
  +{static} main(args: String[]): void
}

class GhostNet {
  -id: Long
  -location: String
  -size: String
  -status: Status
  -anonymousReport: Boolean = Boolean.TRUE
  -reporterName: String
  -reporterPhone: String
  -salvagedBy: Person
  --
  +getId(): Long
  +setId(id: Long): void
  +getLocation(): String
  +setLocation(location: String): void
  +getSize(): String
  +setSize(size: String): void
  +getStatus(): Status
  +setStatus(status: Status): void
  +getAnonymousReport(): Boolean
  +isAnonymousReport(): boolean
  +setAnonymousReport(anonymousReport: Boolean): void
  +getReporterName(): String
  +setReporterName(reporterName: String): void
  +getReporterPhone(): String
  +setReporterPhone(reporterPhone: String): void
  +getSalvagedBy(): Person
  +setSalvagedBy(salvagedBy: Person): void
}

class Person {
  -id: Long
  -name: String
  -phone: String
  --
  +Person()
  +getId(): Long
  +setId(id: Long): void
  +getName(): String
  +setName(name: String): void
  +getPhone(): String
  +setPhone(phone: String): void
}

interface GhostNetRepository {
}

interface PersonRepository {
}

GhostNetController *-- GhostNetRepository
GhostNetController *-- PersonRepository
GhostNetController ..> GhostNet
GhostNetController ..> Person
GhostNet *-- Person
@enduml